# STM

./: .gitignore  Readme.CMake  Readme.Newbuild  Readme.STMPE  Readme.txt
Bios/Override/Vlv2BinaryPkg/X64DEBUG/IA32/: MemoryInit.efi  PeiSmmAccess.efi
Bios/Override/Vlv2BinaryPkg/X64DEBUG/X64/: SmmAccess.efi
Bios/Override/Vlv2BinaryPkg/X64RELEASE/IA32/: MemoryInit.efi  PeiSmmAccess.efi
Bios/Override/Vlv2BinaryPkg/X64RELEASE/X64/: SmmAccess.efi
Bios/StmCpuPkg/: StmCpuPkg.dec  StmCpuPkg.dsc
Bios/StmCpuPkg/Include/Guid/: MsegSmram.h
Bios/StmCpuPkg/Include/Protocol/: SmMonitorInit.h
Bios/StmCpuPkg/PiSmmCpuDxeSmm/: MpService.c  PiSmmCpuDxeSmm.c  PiSmmCpuDxeSmm.h  PiSmmCpuDxeSmm.inf  SmmProfile.c  SmmStm.c  SmmStm.h  SmramSaveState.c
Bios/StmCpuPkg/PiSmmCpuDxeSmm/Ia32/: SmiEntry.S  SmiEntry.asm  SmiException.S  SmiException.asm
Bios/StmCpuPkg/PiSmmCpuDxeSmm/X64/: SmiEntry.S  SmiEntry.asm  SmiException.S  SmiException.asm
Bios/StmPlatformSamplePkg/: StmPlatformSamplePkg.Sample.fdf  StmPlatformSamplePkg.dec  StmPlatformSamplePkg.dsc
Bios/StmPlatformSamplePkg/Compatibility/EndOfDxeOnExitPmAuthThunk/: EndOfDxeOnExitPmAuthThunk.c  EndOfDxeOnExitPmAuthThunk.h  EndOfDxeOnExitPmAuthThunk.inf
Bios/StmPlatformSamplePkg/Compatibility/SmmCpuSaveStateProtocolOnSmst2/: SmmCpuSaveStateProtocolOnSmst2.c  SmmCpuSaveStateProtocolOnSmst2.inf
Bios/StmPlatformSamplePkg/MsegSmramPei/: MsegSmramPei.c  MsegSmramPei.inf
Bios/StmPlatformSamplePkg/StmPlatformSmm/: StmPlatformResource.c  StmPlatformResource.h  StmPlatformSmm.c  StmPlatformSmm.h  StmPlatformSmm.inf
Bios/StmPlatformSamplePkg/TestBin/X64DEBUG/: Frm.efi  FrmLoader.depex  FrmLoader.efi  FrmLoaderApp.efi  StmService.efi  StmService.inf
Bios/StmPlatformSamplePkg/TestBin/X64RELEASE/: Frm.efi  FrmLoader.efi  FrmLoader.inf  FrmLoaderApp.efi  StmService.efi
Stm/: CMakeLists.txt  Readme.txt  StmPe.sln  StmPe.vcxproj  StmPe.vcxproj.filters  buildstm.bat  buildstm.sh  buildstmtool.bat  preparestm.bat
Stm/Conf/: tools_def.txt
Stm/Conf/.cache/: build.db
Stm/StmPkg/: StmPkg.dec  StmPkg.dsc  StmPkgRelease.dsc
Stm/StmPkg/Core/: BaseAsm.h  CMakeLists.txt  Cpu.c  CpuDef.h  Dump.c  EventLog.c  PcdData.c  PcdData.h  PeStmEpt.h  Stm.h  Stm.inf  Stm.lds  StmPerformance.c  StmResource.c  VmcsRecord.c
Stm/StmPkg/Core/Init/: CMakeLists.txt  EptInit.c  IoInit.c  Memory.c  MsrInit.c  Paging.c  PeVmcsInit.c  Relocate.c  StmInit.c  StmInit.h  VmcsInit.c
Stm/StmPkg/Core/Init/Ia32/: AsmStmInit.asm  AsmStmInit.s
Stm/StmPkg/Core/Init/x64/: AsmStmInit.S  AsmStmInit.asm  AsmStmInit.s
Stm/StmPkg/Core/Runtime/: CMakeLists.txt  PageTable.c  PeApicHandler.c  PeEptHandler.c  PeLoadVm.c  PeLoadVm.h  PePciHandler.c  PeSmiHandler.c  PeSmiVmcallHandler.c  PeSmmBadGuestStateHandler.c  PeSmmCpuidHandler.c  PeSmmCrHandler.c  PeSmmExceptionHandler.c  PeSmmHandler.c  PeSmmIoHandler.c  PeSmmMsrHandler.c  PeSmmPreemptionTimerHandler.c  PeSmmRsmHandler.c  PeSmmTripleFaultHandler.c  PeSmmVmcallHandler.c  PeStm.h  PeVmcsInit.c  PeVmxState.c  SmiEventHandler.c  SmiHandler.c  SmiVmcallHandler.c  SmmCacheHandler.c  SmmCpuidHandler.c  SmmCrHandler.c  SmmEptHandler.c  SmmExceptionHandler.c  SmmHandler.c  SmmIoHandler.c  SmmMp.c  SmmMsrHandler.c  SmmRsmHandler.c  SmmSetup.c  SmmStateSync.c  SmmTaskSwitchHandler.c  SmmTearDown.c  (+7 more)
Stm/StmPkg/Core/Runtime/Ia32/: Exception.asm  Exception.s  PeVmExit.asm  SmmException.c  SmmStateSyncIa32eGpr.c  VmExit.asm  VmExit.s
Stm/StmPkg/Core/Runtime/x64/: Exception.S  Exception.asm  Exception.s  PeVmExit.S  PeVmExit.asm  PeVmExit.s  SmmException.c  SmmStateSyncIa32eGpr.c  VmExit.S  VmExit.asm
Stm/StmPkg/EdkII/: edksetup.bat
Stm/StmPkg/EdkII/BaseTools/Source/C/: Makefile
Stm/StmPkg/EdkII/BaseTools/Source/C/GenStm/: GNUmakefile  GenStm.c  GenStm.h  Makefile
Stm/StmPkg/EdkII/MdePkg/Include/: Base.h
Stm/StmPkg/EdkII/MdePkg/Include/IndustryStandard/: Acpi40.h
Stm/StmPkg/EdkII/MdePkg/Include/Protocol/: DebugSupport.h
Stm/StmPkg/Include/: StmApi.h
Stm/StmPkg/Include/Ia32/: CpuArchSpecific.h
Stm/StmPkg/Include/x64/: CpuArchSpecific.h
Stm/StmPkg/Tool/GenStm/: GenStm.c  GenStm.h
Test/DmaPkg/: DmaPkg.dec  DmaPkg.dsc
Test/DmaPkg/DmaProtection/: CsmSupport.c  DmaProtection.c  DmaProtection.h  DmaProtection.inf  DmarAcpiTable.c  PciHook.c  PciInfo.c  TranslationTable.c  TranslationTableEx.c  VtdReg.c
Test/DmaPkg/Include/IndustryStandard/: DMARemappingReportingTable.h  Vtd.h
Test/FrmPkg/: FrmPkg.Sample.fdf  FrmPkg.dec  FrmPkg.dsc
Test/FrmPkg/Core/: Acpi.c  Cpu.c  CpuDef.h  Dce.h  DlEntryDump.c  DrtmTpm.h  Dump.c  Dump.h  Frm.h  Frm.inf  Tpm.c
Test/FrmPkg/Core/Init/: ApInit.c  DlEntry.c  DlEntryCacheInit.c  DlEntryWakeupAp.c  Dmar.h  EptInit.c  FrmInit.c  FrmInit.h  IoInit.c  Memory.c  Paging.c  SrmInit.c  VmcsInit.c  VmxTimerInit.c
Test/FrmPkg/Core/Init/Ia32/: ApWakeup.asm  ApWakeup.s  MleEntrypoint.asm  MleEntrypoint.s  RlpWake.asm  RlpWake.s  Smx.i  Smx.inc
Test/FrmPkg/Core/Init/x64/: ApWakeup.asm  ApWakeup.s  MleEntrypoint.asm  MleEntrypoint.s  RlpWake.asm  RlpWake.s  Smx.i  Smx.inc
Test/FrmPkg/Core/Runtime/: ApHandler.c  CacheHandler.c  CpuidHandler.c  CrHandler.c  DlmeExit.c  EptHandler.c  ExceptionHandler.c  FrmHandler.c  FrmHandler.h  FrmTeardown.c  InterruptHandler.c  IoAcpiHandler.c  IoHandler.c  IoResetHandler.c  MsrHandler.c  SrmDeactivate.c  TaskSwitchHandler.c  VmcallHandler.c  VmxTimerHandler.c  XsetbvHandler.c
Test/FrmPkg/Core/Runtime/Ia32/: Exception.asm  Exception.s  VmExit.asm  VmExit.s
Test/FrmPkg/Core/Runtime/x64/: Exception.asm  Exception.s  VmExit.asm  VmExit.s
Test/FrmPkg/FrmBin/: Frm.inf
Test/FrmPkg/Include/: FrmCommon.h
Test/FrmPkg/Include/Protocol/: SmMonitorService.h
Test/FrmPkg/Include/x64/: CpuArchSpecific.h
Test/FrmPkg/LoaderApp/: Loader.c  Loader.inf
Test/FrmPkg/LoaderDriver/: Loader.c  Loader.h  Loader.inf
Test/FrmPkg/StmService/: LoadToReserved.c  StmService.c  StmService.h  StmService.inf
Test/FrmPkg/StmService/Ia32/: StmLaunch.asm  StmLaunch.s
Test/FrmPkg/StmService/x64/: StmLaunch.asm  StmLaunch.s
